log/build_2025-06-01_23-02-08/sensor_pub_py/stdout_stderr.log
running egg_info
writing ../../build/sensor_pub_py/sensor_pub_py.egg-info/PKG-INFO
writing dependency_links to ../../build/sensor_pub_py/sensor_pub_py.egg-info/dependency_links.txt
writing entry points to ../../build/sensor_pub_py/sensor_pub_py.egg-info/entry_points.txt
writing requirements to ../../build/sensor_pub_py/sensor_pub_py.egg-info/requires.txt
writing top-level names to ../../build/sensor_pub_py/sensor_pub_py.egg-info/top_level.txt
reading manifest file '../../build/sensor_pub_py/sensor_pub_py.egg-info/SOURCES.txt'
writing manifest file '../../build/sensor_pub_py/sensor_pub_py.egg-info/SOURCES.txt'
running build
running build_py
copying sensor_pub_py/sensor_pub.py -> /home/bagus/ichimonji/ros2-logger/build/sensor_pub_py/build/lib/sensor_pub_py
running install
running install_lib
copying /home/bagus/ichimonji/ros2-logger/build/sensor_pub_py/build/lib/sensor_pub_py/sensor_pub.py -> /home/bagus/ichimonji/ros2-logger/install/sensor_pub_py/lib/python3.10/site-packages/sensor_pub_py
byte-compiling /home/bagus/ichimonji/ros2-logger/install/sensor_pub_py/lib/python3.10/site-packages/sensor_pub_py/sensor_pub.py to sensor_pub.cpython-310.pyc
running install_data
running install_egg_info
  File "/home/bagus/ichimonji/ros2-logger/install/sensor_pub_py/lib/python3.10/site-packages/sensor_pub_py/sensor_pub.py", line 45
    if __name__='__main__':
       ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

removing '/home/bagus/ichimonji/ros2-logger/install/sensor_pub_py/lib/python3.10/site-packages/sensor_pub_py-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/sensor_pub_py/sensor_pub_py.egg-info to /home/bagus/ichimonji/ros2-logger/install/sensor_pub_py/lib/python3.10/site-packages/sensor_pub_py-0.0.0-py3.10.egg-info
running install_scripts
Installing sensor_publisher script to /home/bagus/ichimonji/ros2-logger/install/sensor_pub_py/lib/sensor_pub_py
writing list of installed files to '/home/bagus/ichimonji/ros2-logger/build/sensor_pub_py/install.log'
